# blake2b-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
.github/workflows/: ci.yml
BLAKE2/ref/: blake2.h  blake2b-ref.c
BLAKE2/sse/: blake2b.c
benches/: blake2b.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: blake2b.rs
src/: binding.rs  binding_layout_tests.rs  blake2b.rs  lib.rs
